Demo Packs/Real-Time Translation Pack/force-app/main/default/objects/Virtual_Customer_Route__mdt/Virtual_Customer_Route__mdt.object-meta.xml
<CustomObject>
    <label>Virtual Customer Route</label>
    <pluralLabel>Virtual Customer Routes</pluralLabel>
    <description>Conversation routes for the Virtual Customer component. Each record maps to a MIAW API (Custom Client) deployment and the messaging channel its sessions land on. Edit these in Setup to point the component at your org's deployments — no code change required.</description>
</CustomObject>