Demo Packs/Real-Time Translation Pack/force-app/main/default/objects/Virtual_Customer_Route__mdt/fields/Channel_Dev_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Dev_Name__c</fullName>
    <label>Channel Dev Name</label>
    <description>Developer name of the MessagingChannel (EmbeddedMessaging) the deployment's sessions land on. Used to locate the live session and link the demo contact.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>