Demo Packs/Real-Time Translation Pack/force-app/main/default/objects/Virtual_Customer_Route__mdt/fields/ES_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>ES_Developer_Name__c</fullName>
    <label>ES Developer Name</label>
    <description>Developer name of the MIAW API (Custom Client) Embedded Service deployment to send inbound messages through. Must be Published.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>