Demo Packs/Real-Time Translation Pack/force-app/main/default/objects/Virtual_Customer_Route__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <description>Only active routes appear in the component's route picker.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>