Demo Packs/Real-Time Translation Pack/force-app/main/default/objects/Virtual_Customer_Route__mdt/fields/Is_Agentforce__c.field-meta.xml
<CustomField>
    <fullName>Is_Agentforce__c</fullName>
    <label>Is Agentforce</label>
    <description>When checked, the route shows the escalation toggle and the customer asks for a human after the third turn (the agent's transfer action handles the handoff).</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>