Demo Packs/Real-Time Translation Pack/force-app/main/default/objects/Virtual_Customer_Route__mdt/fields/Route_Label__c.field-meta.xml
<CustomField>
    <fullName>Route_Label__c</fullName>
    <label>Route Label</label>
    <description>Text shown in the component's "Conversation route" picker.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>