Demo Packs/Real-Time Translation Pack/force-app/main/default/objects/Virtual_Customer_Route__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <description>Order the routes appear in the picker (lowest first).</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>